Vladislav_Sivtsov/12.K8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
      - name: html-volume
        emptyDir: {}
      - name: config-volume
        configMap:
          name: nginx-index
      - name: ssh-keys
        secret:
          secretName: ssh-key-secret
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: ssh-keys
          mountPath: /root/.ssh
          readOnly: true
